feat: introduce a casino captcha
